--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,12 @@
     AUTO_RELOAD
     <div class="toggle-switch">
         <input id="toggle_auto_reload" class="toggle-input" type='checkbox' />
-        <label for="toggle" class="toggle-label" />
+        <label for="toggle_auto_reload" class="toggle-label" />
     </div>
     SEND_NOTIFICATION_END_OF_BATTLE
     <div class="toggle-switch">
         <input id="toggle_send_notification_end_of_battle" class="toggle-input" type='checkbox' />
-        <label for="toggle" class="toggle-label" />
+        <label for="toggle_send_notification_end_of_battle" class="toggle-label" />
     </div>
     <script src="popup.js"></script>
 </body>
