Change the do_filter flag so that it can be controlled from popup.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+    DO_FILTER
+    <div class="toggle-switch">
+        <input id="toggle_do_filter" class="toggle-input" type='checkbox' />
+        <label for="toggle_do_filter" class="toggle-label" />
+    </div>
     AUTO_RELOAD
     <div class="toggle-switch">
         <input id="toggle_auto_reload" class="toggle-input" type='checkbox' />
