Add root_switch to localStorage.

--- a/chrome-extension/popup/popup.html
+++ b/chrome-extension/popup/popup.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+    ROOT_SWITCH
+    <div class="toggle-switch">
+        <input id="toggle_root_switch" class="toggle-input" type='checkbox' />
+        <label for="toggle_root_switch" class="toggle-label" />
+    </div>
     DO_FILTER
     <div class="toggle-switch">
         <input id="toggle_do_filter" class="toggle-input" type='checkbox' />
